fix: devpage overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@
 @media (max-width: 600px) {
   
   #modal-container {
-    top: 320px;
+    top: 290px;
   }
 }
